<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_horizontal"
    android:layout_marginStart="@dimen/margin_vertical"
    android:layout_marginEnd="@dimen/margin_vertical"
    android:layout_marginBottom="@dimen/margin_horizontal"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:maxLines="1"
            android:inputType="text"
            android:theme="@style/EditText"/>

    </com.google.android.material.textfield.TextInputLayout>


    <DatePicker
        android:id="@+id/dtpFecha"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_piker_alto"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_gravity="center_horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:fitsSystemWindows="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fitsSystemWindows="true">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_edt"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:theme="@style/EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_edt"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:theme="@style/EditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:lines="3"
                    android:scrollbars="vertical"
                    android:paddingTop="@dimen/padding_edt"
                    android:inputType="textMultiLine"
                    android:hint="@string/descripcion"
                    android:theme="@style/EditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_marginTop="@dimen/margin_btn_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:textAllCaps="false"
                android:theme="@style/MyButton"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>